--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -519,9 +519,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d94eaa4-d0ba-4e63-99d9-6350a7e04a71",
+   "metadata": {},
+   "source": [
+    "**Data Source:**\n",
+    "The war data used in this analysis was sourced from [Wikipedia - List of wars involving the United States](https://en.wikipedia.org/wiki/List_of_wars_involving_the_United_States).\n",
+    "\n",
+    "Please note that the accuracy and completeness of the data are subject to the information available on the Wikipedia page.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c4aa80-bbf0-44cb-85e7-10b2e9db5607",
+   "id": "5627ff8e-9649-4715-8886-e8e6bbb3f69e",
    "metadata": {},
    "outputs": [],
    "source": []
